
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 unsigned int HDR_SIZE ;
 char* Hdr ;
 unsigned int Len ;
 unsigned int MSG_ID_SIZE ;
 char* MsgId ;
 int PONG_DESCR ;
 char* Payload ;
 int fprintf (int ,char*) ;
 int ip ;
 int memcpy (char*,int*,int) ;
 int out_stream ;
 int port ;
 int random_array (unsigned int,char*) ;
 int set_descr_hdr (char*,char*,int ,int,int ,unsigned int) ;
 int write_buf (int,char*,unsigned int) ;

void
send_pong(int fd){
  char * msg_id;
  unsigned payload_len;

  ip = 0x0100007f;
  port = 50000;


  random_array(MSG_ID_SIZE, MsgId);
  msg_id = MsgId;
  Len = 14;

  set_descr_hdr(Hdr, msg_id, PONG_DESCR, 5, 0, Len);
  if(!write_buf(fd, Hdr, HDR_SIZE)){
    fprintf(out_stream, "send_pong(): couldn't send header\n");
  }
  payload_len = Len;
  random_array(payload_len, Payload);
  memcpy(&Payload[0], &port, 2);
  memcpy(&Payload[2], &ip, 4);
  if(!write_buf(fd, Payload, payload_len)){
    fprintf(out_stream, "send_pong(): couldn't send payload\n");
  }
}
